# Verrou

./: .gitignore  .rustfmt.toml  .stylelintrc.json  Cargo.toml  LICENSE  README.md  deny.toml  index.html  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/scripts/: check-no-secret-logging.sh  verify-binary-hardening.sh  verify-zero-network.sh
.github/workflows/: ci.yml
crates/verrou-crypto-core/: Cargo.toml
crates/verrou-crypto-core/src/: biometric.rs  error.rs  hardware_key.rs  kdf.rs  kem.rs  lib.rs  memory.rs  signing.rs  slots.rs  symmetric.rs  totp.rs  vault_format.rs
crates/verrou-crypto-core/src/bip39/: mod.rs  wordlists.rs
crates/verrou-crypto-core/src/password/: mod.rs  wordlist.rs
crates/verrou-crypto-core/src/transfer/: mod.rs
crates/verrou-crypto-core/tests/: bip39_proptests.rs  integration_tests.rs  kat_vectors_tests.rs  kdf_proptests.rs  kem_proptests.rs  memory_proptests.rs  security_tests.rs  slots_proptests.rs  symmetric_proptests.rs  totp_proptests.rs  vault_format_proptests.rs
crates/verrou-crypto-core/tests/integration/: bip39_roundtrip.rs  kdf_calibration.rs  kem_roundtrip.rs  mod.rs  signing_roundtrip.rs  slot_roundtrip.rs  symmetric_roundtrip.rs  totp_roundtrip.rs  vault_format_roundtrip.rs
crates/verrou-crypto-core/tests/kat_vectors/: aes_gcm.rs  argon2id.rs  bip39.rs  ed25519.rs  hkdf_kem.rs  ml_dsa.rs  ml_kem.rs  mod.rs  totp.rs  x25519.rs
crates/verrou-crypto-core/tests/security/: audit_verification.rs  entropy_quality.rs  mlock_verification.rs  mod.rs  timing_sidechannel.rs  zeroize_on_drop.rs
crates/verrou-vault/: Cargo.toml
crates/verrou-vault/fuzz/: Cargo.toml
crates/verrou-vault/fuzz/fuzz_targets/: aegis_import.rs  google_auth_import.rs  twofas_import.rs
crates/verrou-vault/migrations/: 001_initial_schema.sql  002_add_entry_columns.sql  003_add_tags_column.sql  004_add_credential_type.sql  005_add_username_column.sql  006_create_attachments_table.sql  007_add_template_column.sql
crates/verrou-vault/src/: attachments.rs  db.rs  entries.rs  error.rs  folders.rs  health.rs  lib.rs  lifecycle.rs  preferences.rs  recovery.rs  transfer.rs
crates/verrou-vault/src/export/: mod.rs  verrou_format.rs
crates/verrou-vault/src/import/: aegis.rs  google_auth.rs  mod.rs  twofas.rs  verrou_format.rs
crates/verrou-vault/tests/: attachments_integration.rs  db_integration.rs  entries_integration.rs  export_integration.rs  health_integration.rs  import_aegis.rs  import_google_auth.rs  import_twofas.rs  import_verrou_integration.rs  lifecycle_integration.proptest-regressions  lifecycle_integration.rs  transfer_integration.rs
docs/: kobalte-solidjs-patterns.md
public/: theme-init.js
src/: App.tsx  main.tsx  popup.tsx  test-setup.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: attachments.rs  auth_utils.rs  biometric.rs  bip39.rs  clipboard.rs  entries.rs  export.rs  folders.rs  hardware_key.rs  import.rs  mod.rs  onboarding.rs  paper_backup.rs  password_generator.rs  platform.rs  preferences.rs  qr_transfer.rs  vault.rs
src-tauri/src/commands/snapshots/: verrou__commands__entries__tests__entry_detail_dto_snapshot.snap  verrou__commands__entries__tests__entry_metadata_dto_minimal_snapshot.snap  verrou__commands__entries__tests__entry_metadata_dto_snapshot.snap  verrou__commands__entries__tests__recovery_code_display_dto_snapshot.snap  verrou__commands__entries__tests__recovery_code_display_dto_standalone_snapshot.snap  verrou__commands__entries__tests__recovery_stats_dto_snapshot.snap  verrou__commands__entries__tests__seed_display_dto_snapshot.snap  verrou__commands__entries__tests__seed_display_dto_with_passphrase_snapshot.snap  verrou__commands__import__tests__import_summary_dto_snapshot.snap  verrou__commands__import__tests__validation_report_dto_snapshot.snap
src-tauri/src/platform/: autostart.rs  biometric.rs  clipboard.rs  hardware_key.rs  hotkeys.rs  mod.rs  tray.rs
src/__tests__/: App.test.tsx
src/components/: Button.module.css  Button.tsx  Icon.module.css  Icon.tsx  Input.module.css  Input.tsx  Modal.module.css  Modal.tsx  PasswordInput.module.css  (+16 more)
(+282 files in other folders)
