[workspace]
members = ["crates/*", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/arnaultpascual/Verrou"

[workspace.lints.clippy]
arithmetic_side_effects = "deny"
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[profile.release]
overflow-checks = true    # Panic on integer overflow (security)
lto = true                # Link-time optimization (binary hardening)
codegen-units = 1         # Deterministic builds (reproducibility)
strip = "symbols"         # Strip debug symbols (no plaintext leaks)
