[package]
name = "verrou-crypto-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure cryptographic primitives for VERROU — audit target"

[dependencies]
ring = "0.17"
argon2 = "0.5"
blake3 = "1"
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
x25519-dalek = { version = "2", features = ["static_secrets", "zeroize"] }
libcrux-ml-kem = { version = "0.0.6", default-features = false, features = ["mlkem1024"] }
libcrux-ml-dsa = { version = "0.0.6", default-features = false, features = ["mldsa65"] }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
insta = { version = "1", features = ["json"] }
dudect-bencher = "0.4"
